<resources>
    <string name="app_name">Время до Нового года</string>
    <string name="design">Дизайн</string>
    <string name="settings">Настройки</string>
    <string name="button">Кнопка</string>
    <string name="on">Активно</string>
    <string name="off">Выключено</string>
    <string name="select_style">Выберите фон уведомления</string>
    <string name="interval">Интервал обновления уведомления</string>
    <string name="add_some">Добавить своё фото</string>
    <string name="pick_cancelled">Выбор фото отменён</string>
    <string name="trouble">Упс… Что-то пошло не так</string>
    <string name="storage_not_accessable">Хранилище медиа недоступно</string>
    <string name="nothing_selected">Ничего не выбрано</string>
    <string name="file_not_found">Файл не найден</string>
    <string name="IO_Fail">IO Exception!</string>
    <string name="success">Фото успешно установлено</string>
    <string name="some_error">Some error occurred!</string>

    <string-array name="intervals">
        <item>Каждую минуту</item>
        <item>Каждые 15 минут</item>
        <item>Каждые 30 минут</item>
        <item>Каждый час</item>
        <item>Каждые 3 часа</item>
        <item>Каждые 6 часов</item>
        <item>Каждые 12 часов</item>
        <item>Раз в сутки</item>
    </string-array>

    <string name="days">дней</string>
    <string name="hours">часов</string>
    <string name="minutes">минут</string>
    <string name="our_time">До Нового года осталось</string>
</resources>
